deployment/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: gmr
  name: gmr-redis
  labels:
    app: gmr-redis
spec:
  type: ClusterIP
  selector:
    app: gmr-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
