deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: gmr
  name: gmr-api
  labels:
    app: gmr-api
spec:
  type: ClusterIP
  selector:
    app: gmr-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
