deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gmr-api
  namespace: gmr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: gmr.void42.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edgar-gmr-etl
                port:
                  number: 80
